--- a/index.css
+++ b/index.css
@@ -5,7 +5,8 @@
 }
 
 html {
-  height: 100%;  
+  height: 100%; 
+  scroll-behavior: smooth; 
 }
 
 body {
@@ -105,7 +106,18 @@ body {
   margin-bottom: 0;
 }
 
+.section__work-item {
+  margin-bottom: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
 .left {
+  width: 40%;
+}
+
+.job {
   width: 40%;
 }
 
@@ -114,8 +126,24 @@ body {
   width: 20%;
 }
 
+.background {
+  width: 40%;
+}
+
+.profession {
+  font-weight: bold;
+  font-size: 15px;
+  text-decoration: underline;
+}
+
 .name {
   font-weight: bold;
+}
+
+li {
+  text-decoration: none;
+  color: #999;
+  font-style: italic;
 }
 
 a {
@@ -181,6 +209,10 @@ a:hover {
 .projects:hover {
   transform: translateY(-5px);
   box-shadow: 10px 5px 5px black;
+}
+
+.desc {
+  margin: 10px;
 }
 
 @keyframes bounce {
