--- a/index.css
+++ b/index.css
@@ -77,6 +77,12 @@ body {
     margin-right: 10px;
 }
   
+.underLine {
+  width: 100%;
+  display: inline-block;
+  border: 1px solid #999;
+  margin-top: 10px;
+}
   
 .main {
   line-height: 20px;
